--- a/src/app.css
+++ b/src/app.css
@@ -1,16 +1,25 @@
 @import '@fontsource/fira-mono';
 
+/*
+Color palette:
+- white: #f5f6f1
+- dark green: #6e765e
+- light green: #959e81
+- dark pink: #e6b3b2
+- light pink: #f1d3d1
+*/
+
 :root {
 	--font-body:
 		'Birthstone', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
 		'Open Sans', 'Helvetica Neue', sans-serif;
 	--font-mono: 'Fira Mono', monospace;
-	--color-bg-0: rgb(202, 216, 228);
-	--color-bg-1: hsl(209, 36%, 86%);
-	--color-bg-2: hsl(224, 44%, 95%);
-	--color-theme-1: #dcdcdc; /*#f1cbff;*/
-	--color-theme-2: #e1f7d5;
-	--color-text: rgba(0, 0, 0, 0.7);
+	--color-bg-0: #e6b3b2;
+	--color-bg-1: #e6b3b2;
+	--color-bg-2: #e6b3b2;
+	--color-theme-1: #6e765e; /*#f1cbff;*/
+	--color-theme-2: #e6b3b2;
+	--color-text: #f5f6f1;
 	--column-width: 42rem;
 	--column-margin-top: 4rem;
 	font-family: var(--font-body);
@@ -23,16 +32,17 @@ body {
 	background-attachment: fixed;
 	background-color: var(--color-bg-1);
 	background-size: 100vw 100vh;
-	background-image:
+	/* background-image:
 		radial-gradient(50% 50% at 50% 50%, rgba(255, 255, 255, 0.75) 0%, rgba(255, 255, 255, 0) 100%),
-		linear-gradient(180deg, var(--color-bg-0) 0%, var(--color-bg-1) 15%, var(--color-bg-2) 50%);
+		linear-gradient(180deg, var(--color-bg-0) 0%, var(--color-bg-1) 15%, var(--color-bg-2) 50%); */
 }
 
 h1 {
-	font-size: 4rem;
+	font-size: 6rem;
 }
 
 p {
+	font-size: 1.8rem;
 	line-height: 1.5;
 }
 
