--- a/src/app.css
+++ b/src/app.css
@@ -14,16 +14,17 @@ Color palette:
 		'Birthstone', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
 		'Open Sans', 'Helvetica Neue', sans-serif;
 	--font-mono: 'Fira Mono', monospace;
-	--color-bg-0: #e6b3b2;
-	--color-bg-1: #e6b3b2;
-	--color-bg-2: #e6b3b2;
+	--color-bg-0: #f5f6f1;
+	--color-bg-1: #f5f6f1;
+	--color-bg-2: #f5f6f1;
 	--color-theme-1: #6e765e; /*#f1cbff;*/
 	--color-theme-2: #e6b3b2;
-	--color-text: #f5f6f1;
+	--color-text: #6e765e;
 	--column-width: 42rem;
 	--column-margin-top: 4rem;
 	font-family: var(--font-body);
 	color: var(--color-text);
+	font-size: 1.5rem;
 }
 
 body {
@@ -37,13 +38,8 @@ body {
 		linear-gradient(180deg, var(--color-bg-0) 0%, var(--color-bg-1) 15%, var(--color-bg-2) 50%); */
 }
 
-h1 {
-	font-size: 6rem;
-}
-
 p {
-	font-size: 1.8rem;
-	line-height: 1.5;
+	font-size: 1.4rem;
 }
 
 a {
