--- a/src/app.css
+++ b/src/app.css
@@ -17,7 +17,7 @@ Color palette:
 	--color-bg-0: #f5f6f1;
 	--color-bg-1: #f5f6f1;
 	--color-bg-2: #f5f6f1;
-	--color-theme-1: #6e765e; /*#f1cbff;*/
+	--color-theme-1: #6e765e;
 	--color-theme-2: #e6b3b2;
 	--color-text: #6e765e;
 	--column-width: 42rem;
@@ -32,14 +32,17 @@ body {
 	margin: 0;
 	background-attachment: fixed;
 	background-color: var(--color-bg-1);
-	background-size: 100vw 100vh;
-	/* background-image:
-		radial-gradient(50% 50% at 50% 50%, rgba(255, 255, 255, 0.75) 0%, rgba(255, 255, 255, 0) 100%),
-		linear-gradient(180deg, var(--color-bg-0) 0%, var(--color-bg-1) 15%, var(--color-bg-2) 50%); */
+	background-size: cover;
+	background-image: url('lib/images/background.jpg');
+	box-shadow: inset 0 0 0 50vw rgba(147, 147, 147, 0.372);
 }
 
 p {
 	font-size: 1.4rem;
+}
+
+.standout {
+	text-shadow: 1px 1px 0px rgb(0, 0, 0);
 }
 
 a {
@@ -76,14 +79,8 @@ button:focus:not(:focus-visible) {
 	}
 }
 
-.visually-hidden {
-	border: 0;
-	clip: rect(0 0 0 0);
-	height: auto;
-	margin: 0;
-	overflow: hidden;
-	padding: 0;
-	position: absolute;
-	width: 1px;
-	white-space: nowrap;
+@media (max-width: 1300px) {
+	body {
+		background-image: url('lib/images/background-mobile.jpg');
+	}
 }
